# cyberimmune-systems-example-traffic-light-kos

./: .gitignore  CMakeLists.txt  README.md
central-server/: LICENSE  Makefile  README.md  central-server.py  requests.rest
client/: CMakeLists.txt
client/src/: client.c  gui.c  net.c
connector/: CMakeLists.txt
connector/include/: response-parser.h
connector/src/: connector.c  response-parser.c
control_system/: CMakeLists.txt
control_system/include/: mode.h
control_system/src/: connector.c  control_system.c  gen.py  gpio.c  mode.c
diagnostics/: CMakeLists.txt
diagnostics/src/: client.c  diagnostics.c
einit/: CMakeLists.txt
einit/src/: init.yaml.in  security.psl
json-parser/: CMakeLists.txt  json.c
lights_gpio/: CMakeLists.txt
lights_gpio/src/: lights_gpio.c
resources/: CControlSystem.cdl  CReport.cdl  Client.edl  ControlSystem.edl  ControlSystem.idl  Diagnostics.edl  IReport.idl  Server.edl
resources/edl/: Connector.edl
server/: CMakeLists.txt
server/src/: server.c
